# GeminiSolar

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  SOLID_AUDIT.md  flake.nix  task.md
.next/: build-manifest.json  fallback-build-manifest.json  trace  trace-build
.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
.next/dev/: prerender-manifest.json  trace
.next/dev/cache/: .rscinfo
.next/dev/server/: server-reference-manifest.js  server-reference-manifest.json
.next/dev/server/app/: page_client-reference-manifest.js
.next/dev/server/chunks/ssr/: [root-of-the-server]__c2c32f1c._.js.map  [root-of-the-server]__ca22fcff._.js  _ce9a95c8._.js  (+14 more)
.next/dev/static/chunks/: node_modules_811e3aea._.js  node_modules_811e3aea._.js.map  node_modules_@swc_helpers_cjs_d80fb378._.js.map  node_modules_next_dist_094231d7._.js.map  node_modules_next_dist_7a8122d0._.js.map  node_modules_next_dist_client_aaee43fe._.js.map  node_modules_next_dist_compiled_a0e4c7b4._.js.map  node_modules_next_dist_compiled_next-devtools_index_1dd7fb59.js  node_modules_next_dist_compiled_react-dom_1e674e59._.js.map  node_modules_next_dist_compiled_react-server-dom-turbopack_9212ccad._.js.map  node_modules_next_dist_compiled_react_583fbf25._.js.map  node_modules_three_build_three_core_996ef05a.js.map  node_modules_three_build_three_module_0c59ee63.js.map  src_a2474899._.js  src_a2474899._.js.map  src_app_globals_91e4631d.css  src_app_globals_91e4631d.css.map  src_app_page_tsx_56f87536._.js
.next/server/: server-reference-manifest.json
.next/server/app/: _global-error.html  _not-found.html  page_client-reference-manifest.js
.next/server/app/_global-error.segments/: __PAGE__.segment.rsc  _head.segment.rsc
.next/server/app/_not-found.segments/: _head.segment.rsc  _not-found.segment.rsc
.next/server/app/index.segments/: __PAGE__.segment.rsc  _head.segment.rsc
.next/server/chunks/ssr/: src_app_layout_tsx_cc8184fa._.js.map  src_app_page_tsx_a7111f3e._.js.map
.next/standalone/: package.json  server.js
.next/standalone/.next/: BUILD_ID  prerender-manifest.json  required-server-files.json
.next/standalone/.next/server/: server-reference-manifest.js
.next/static/chunks/: 5119482d8a9d633f.js  f57281e5c32c2a59.css
assets/shaders/: orbit.frag  planet.frag  planet.vert  shader.frag  shader.vert  starfield.frag  starfield.vert
assets/systems/: 55cancri.json  binary_star.json  black_hole.json  hr8799.json  kepler11.json  kepler90.json  solar_system.json  trappist1.json
src/: main.cpp
src/core/: App.cpp  App.hpp  BodyPicker.cpp  BodyPicker.hpp  InputManager.cpp  InputManager.hpp  Logger.hpp  Time.cpp  Time.hpp
src/platform/: SDLWindow.cpp  SDLWindow.hpp  WindowInterface.hpp
src/render/: Camera.cpp  Camera.hpp  GLRenderer.cpp  GLRenderer.hpp  Mesh.cpp  Mesh.hpp  MeshFactory.cpp  MeshFactory.hpp  RenderInterface.hpp  Renderer.cpp  Renderer.hpp  ShaderManager.cpp  ShaderManager.hpp  SimulationUI.cpp  SimulationUI.hpp  Swapchain.cpp  Swapchain.hpp  UIManager.cpp  UIManager.hpp  VulkanContext.cpp  VulkanContext.hpp
src/simulation/: CelestialBody.cpp  CelestialBody.hpp  OrbitModel.cpp  OrbitModel.hpp  PhysicsSimulator.cpp  PhysicsSimulator.hpp  SolarSystem.cpp  SolarSystem.hpp  SystemLoader.cpp  SystemLoader.hpp
(+13 files in other folders)
